2008-05-27  Milan Zamazal  <pdm@brailcom.org>

	* pytis/presentation/field.py
	(PresentedRow.original_presented_row): New method.

2008-05-23  Tomas Cerha  <cerha@brailcom.org>

	* pytis/util/configuration.py
	(Configuration._Option_user_config_file.default): Don't set if the
	file actually doesn't exist.
	(Configuration._read_configuration): Read `user_config_file' even
	if `config_file' is not defined.  Don't suppress errors when
	reading `user_config_file'.
	(Configuration.__getattr__): Check `config_file' and
	`user_config_file' independently.
	(Configuration.__setattr__): Allow dynamic setting of `user_config_file'.

2008-05-21  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py
	(BrowseForm.__init__.browse_form_uri_provider): Image URI handling fixed.

2008-05-19  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/_test.py (Password.test_validation): Fix one of the
	older tests.

2008-05-19  Milan Zamazal  <pdm@brailcom.org>
	
	* pytis/data/types_.py (Password): New parameter `strength'.

2008-05-16  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/postgresql.py
	(PostgreSQLStandardBindingHandler._pdbb_get_table_type.lookup_column):
	Use of undefined variable removed.

2008-05-16  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/types_.py (DateTime.current_gmtime): New method.

2008-05-14  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/postgresql.py (PostgreSQLStandardBindingHandler): Use
	_pdbb_table_column_data class wide.

2008-05-14  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/postgresql.py (DBDataPostgreSQL.fetchone.skip): Don't
	run fetch SQL command when asking for 0 rows.

2008-05-14  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/postgresql.py: Instead of asking database about each
	database column separately, ask about all columns at once, thus
	reducing number of initial SQL queries.

2008-05-14  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/dbapi.py (_DBAPIAccessor._postgresql_query.do_query):