@@ -1,3 +1,10 @@
+2008-06-06  Tomas Cerha  <cerha@brailcom.org>
+
+	* pytis/data/_test.py (TutorialTest.test_it): Test updated.
+
+	* pytis/web/form.py (ItemizedView): New class.
+	(ListView): Docstring added.
+
 2008-05-27  Milan Zamazal  <pdm@brailcom.org>
 
 	* pytis/presentation/field.py
